# TradingBot

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: 01_original_dqn.ipynb
src/data/: fetcher.py  preprocessor.py
src/models/: dqn.py
src/trading/: environment.py
src/utils/: visualization.py
