[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tradingbot"
version = "0.1.0"
description = "Stock price prediction and automated trading using Deep Q-Network"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "torch>=1.3",
    "numpy",
    "pandas",
    "plotly",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]
